--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,12 @@
   <body>
  
     <include src="./partials/header-futer.html"></include>
+    <include src="./partials/home-page.html"></include>
+    <include src="./partials/search-film-home.html"></include>
+    <include src="./partials/libruary-page.html"></include>
+    <include src="./partials/wathed-libruary.html"></include>
+    <include src="./partials/modal-card.html"></include>
+    <include src="./partials/loader.html"></include>
+    <include src="./partials/modal-futer.html"></include>
   </body>
 </html>
