--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
  
-    <include src="./partials/header-futer.html"></include>
+    <include src="./partials/header.html"></include>
     <include src="./partials/home-page.html"></include>
     <include src="./partials/search-film-home.html"></include>
     <include src="./partials/libruary-page.html"></include>
@@ -21,5 +21,6 @@
     <include src="./partials/modal-card.html"></include>
     <include src="./partials/loader.html"></include>
     <include src="./partials/modal-futer.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
