--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,20 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
  
     <include src="./partials/header.html"></include>
-    <include src="./partials/home-page.html"></include>
-    <include src="./partials/search-film-home.html"></include>
-    <include src="./partials/libruary-page.html"></include>
-    <include src="./partials/wathed-libruary.html"></include>
-    <include src="./partials/modal-card.html"></include>
-    <include src="./partials/loader.html"></include>
+    <main class="main">
+      <include src="./partials/home-page.html"></include>
+      <include src="./partials/search-film-home.html"></include>
+      <include src="./partials/libruary-page.html"></include>
+      <include src="./partials/wathed-libruary.html"></include>
+      <include src="./partials/modal-card.html"></include>
+      <include src="./partials/loader.html"></include>
+    </main>
     <include src="./partials/modal-futer.html"></include>
     <include src="./partials/footer.html"></include>
   </body>
