--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,12 @@
       <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
- 
+
     <include src="./partials/header.html"></include>
     <main class="main">
       <include src="./partials/home-page.html"></include>
@@ -24,6 +25,7 @@
       <include src="./partials/wathed-libruary.html"></include>
       <include src="./partials/modal-card.html"></include>
       <include src="./partials/loader.html"></include>
+      <include src="./partials/up-btn.html"></include>
     </main>
     <include src="./partials/modal-futer.html"></include>
     <include src="./partials/footer.html"></include>
